[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowmap"
version = "1.0.0"
description = "Passive attack surface mapper using certificate transparency, DNS enumeration, and AI risk analysis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Srinikhil Chakilam", email = "4531201+rawqubit@users.noreply.github.com" }]
keywords = ["security", "recon", "osint", "attack-surface", "passive-scanning", "dns"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Internet",
]
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0",
  "click>=8.0",
  "rich>=13.0",
  "httpx>=0.25",
  "dnspython>=2.4",
]

[project.scripts]
shadowmap = "main:cli"

[project.urls]
Homepage = "https://github.com/rawqubit/shadowmap"
Repository = "https://github.com/rawqubit/shadowmap"
"Bug Tracker" = "https://github.com/rawqubit/shadowmap/issues"
